--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,40 +274,40 @@ jobs:
       #       sudo ls /tmp/vr
       #       sudo cat /tmp/vr/*
       #       ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "wget https://${BUILD_NAME}${QA_HOST_SUFFIX} " 
-      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mv ~/builds/$BUILD_NAME ~/builds/improvement2-kr-7853"
-      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "ls -la ~/builds/"
-      - run:
-          name: 'SauceLabs Browser Tests: Chrome'
-          command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php artisan dusk"'
-          environment:
-            DB_DATABASE: 'circle_test'
-            RUN_MSSQL_TESTS: 'true'
-            MSSQL_HOST: '127.0.0.1'
+      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm ~/builds/improvement-KR-7853 "
+      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm -rf ~/builds/improvement2-kr-7853"
+      # - run:
+      #     name: 'SauceLabs Browser Tests: Chrome'
+      #     command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php artisan dusk"'
+      #     environment:
+      #       DB_DATABASE: 'circle_test'
+      #       RUN_MSSQL_TESTS: 'true'
+      #       MSSQL_HOST: '127.0.0.1'
 
-      - run:
-          name: 'SauceLabs Browser Tests: Firefox'
-          command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
-          environment:
-            SAUCELABS_BROWSER: 'firefox'
-            SAUCELABS_PLATFORM: 'Windows 10'
-            SAUCELABS_BROWSER_VERSION: '47.0'
+      # - run:
+      #     name: 'SauceLabs Browser Tests: Firefox'
+      #     command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
+      #     environment:
+      #       SAUCELABS_BROWSER: 'firefox'
+      #       SAUCELABS_PLATFORM: 'Windows 10'
+      #       SAUCELABS_BROWSER_VERSION: '47.0'
 
-      - run:
-          name: 'SauceLabs Browser Tests: Edge'
-          command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
-          environment:
-            SAUCELABS_BROWSER: 'MicrosoftEdge'
-            SAUCELABS_PLATFORM: 'Windows 10'
-            SAUCELABS_BROWSER_VERSION: '16.16299'
+      # - run:
+      #     name: 'SauceLabs Browser Tests: Edge'
+      #     command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
+      #     environment:
+      #       SAUCELABS_BROWSER: 'MicrosoftEdge'
+      #       SAUCELABS_PLATFORM: 'Windows 10'
+      #       SAUCELABS_BROWSER_VERSION: '16.16299'
 
-      - run:
-          name: 'SauceLabs Browser Tests: Safari'
-          command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
-          environment:
-            SAUCELABS_BROWSER: 'safari'
-            SAUCELABS_PLATFORM: 'macOS 10.13'
-            SAUCELABS_BROWSER_VERSION: '11.0'
+      # - run:
+      #     name: 'SauceLabs Browser Tests: Safari'
+      #     command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk"'
+      #     environment:
+      #       SAUCELABS_BROWSER: 'safari'
+      #       SAUCELABS_PLATFORM: 'macOS 10.13'
+      #       SAUCELABS_BROWSER_VERSION: '11.0'
 
-      - run:
-          name: 'Final QA Artisan DB Migration'
-          command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force"'
+      # - run:
+      #     name: 'Final QA Artisan DB Migration'
+      #     command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force"'
