--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,7 +274,7 @@ jobs:
       #       sudo ls /tmp/vr
       #       sudo cat /tmp/vr/*
       #       ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "wget https://${BUILD_NAME}${QA_HOST_SUFFIX} " 
-      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm ~/builds/improvement-KR-7853 "
+      - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm -rf ~/builds/improvement-KR-7853 "
       - run: ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "rm -rf ~/builds/improvement2-kr-7853"
       # - run:
       #     name: 'SauceLabs Browser Tests: Chrome'
