--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": [
     "php bpm processmaker"
   ],
-  "homepage": "http://processmaker.com",
+  "homepage": "https://www.processmaker.com",
   "license": "GNU Affero General Public License version 3",
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -26,6 +26,7 @@
     "laravel/framework": "5.7.*",
     "laravel/horizon": "^1.3",
     "laravel/passport": "^7.0",
+    "laravel/telescope": "~1.0",
     "laravel/tinker": "^1.0",
     "laravelcollective/html": "^5.4.0",
     "lavary/laravel-menu": "^1.7",
@@ -45,7 +46,6 @@
     "zendframework/zend-diactoros": "1.*"
   },
   "require-dev": {
-    "barryvdh/laravel-debugbar": "^3.2",
     "filp/whoops": "^2.0",
     "laravel/homestead": "^7.18",
     "mockery/mockery": "^1.0",
