--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,18 @@
   ],
   "require": {
     "php": ">=7.2.0",
-    "darkaonline/l5-swagger": "5.7.*",
+    "darkaonline/l5-swagger": "5.8.*",
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
     "fzaninotto/faker": "^1.4",
     "igaster/laravel-theme": "2.0.*",
-    "laravel/framework": "5.7.*",
+    "laravel/framework": "5.8.*",
     "laravel/horizon": "^1.3",
     "laravel/passport": "^7.0",
     "laravel/tinker": "^1.0",
     "laravelcollective/html": "^5.4.0",
     "lavary/laravel-menu": "^1.7",
+    "mustache/mustache": "^2.12.0",
     "phing/phing": "^2.16",
     "pion/laravel-chunk-upload": "dev-master",
     "predis/predis": "^1.1",
