--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,11 @@
     "laravel/framework": "5.8.*",
     "laravel/horizon": "^1.3",
     "laravel/passport": "^7.0",
+    "laravel/telescope": "^2.0",
     "laravel/tinker": "^1.0",
     "laravelcollective/html": "^5.4.0",
     "lavary/laravel-menu": "^1.7",
+    "moontoast/math": "^1.1",
     "mustache/mustache": "^2.12.0",
     "phing/phing": "^2.16",
     "pion/laravel-chunk-upload": "dev-master",
