--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
       - run: sudo docker-php-ext-install -j$(nproc) gd
       - run: sudo docker-php-ext-install -j$(nproc) pcntl
       - run: sudo docker-php-ext-install -j$(nproc) exif
+      - run: sudo docker-php-ext-install -j$(nproc) bcmath
 
       # Install MS SQL PDO Extension dependency
       - run:
@@ -213,7 +214,7 @@ jobs:
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
-            echo "APP_URL=https://dusk-${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging 
+            echo "APP_URL=https://dusk-${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -227,12 +228,12 @@ jobs:
             echo "HOME=/home/circleci" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_AUTH_HOST=%%AUTHHOST%%" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_PORT=%%ECHOPORT%%" >> .env.dusk.staging
-            echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env.dusk.staging           
+            echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env.dusk.staging
             # Generate unique app key
             php artisan key:generate --force
             # Copy over our test oauth keys. Regular install will create new ones
             cp tests/storage/keys/* storage/keys/
-    
+
       - run:
           name: 'QA Package'
           command: './vendor/bin/phing package -Dpackage_name=processmaker-qa-${BUILD_NAME}.tar.gz'
@@ -264,7 +265,7 @@ jobs:
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "sudo /bin/bash /root/cloudops/containerDeploy.sh $BUILD_NAME"
             # Generate Passport Keys
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php artisan passport:keys"
-                    
+
       - run:
           name: 'Preparing the dusk test with SauceLabs'
           command: |
@@ -303,7 +304,7 @@ jobs:
             SAUCELABS_BROWSER: 'safari'
             SAUCELABS_PLATFORM: 'macOS 10.13'
             SAUCELABS_BROWSER_VERSION: '11.0'
-    
+
       - run:
           name: 'Remove the files created'
           command: |
