--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,8 @@ jobs:
 
       - run: sudo npm install -g npm@6.4.1 && npm ci
 
+      - run: php artisan config:cache
+
       - save_cache:
           paths:
             - ./vendor
