command to remove cached config.php file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,8 @@ jobs:
 
       - run: sudo npm install -g npm@6.4.1 && npm ci
 
+      - run: sudo rm -f processmaker/bootstrap/cache/config.php
+
       - save_cache:
           paths:
             - ./vendor
