correction to directory route

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,13 +95,13 @@ jobs:
 
       - run: sudo npm install -g npm@6.4.1 && npm ci
 
-      - run: sudo rm -f processmaker/bootstrap/cache/config.php
       - run:
           name: 'Remove cached config file'
           command: |
             echo "Remove cached config file"
-            sudo rm -f processmaker/bootstrap/cache/config.php
-            sudo ls processmaker/bootstrap/cache
+            echo "pwd"
+            sudo rm -f bootstrap/cache/config.php
+            sudo ls bootstrap/cache
 
       - save_cache:
           paths:
