--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,11 +94,9 @@ jobs:
       - run: composer install -n --prefer-dist
 
       - run:
-          name: 'Remove cached config file'
+          name: 'Clear cached configuration'
           command: |
-            sudo ls bootstrap/cache
             sudo php artisan config:clear
-            sudo ls bootstrap/cache
 
       - run: sudo npm install -g npm@6.4.1 && npm ci
 
