publish telescope assets in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,11 @@ jobs:
           command: |
             sudo php artisan config:clear
 
+      - run:
+          name: 'Publish Telescope assets'
+          command: |
+            sudo vendor:publish --tag=telescope-assets --force
+
       - run: sudo npm install -g npm@6.4.1 && npm ci
 
       - save_cache:
