Add env for disabling telescope

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ BROADCASTER_HOST=https://processmaker.local.processmaker.com:6001
 LARAVEL_ECHO_SERVER_AUTH_HOST=https://processmaker.local.processmaker.com
 LARAVEL_ECHO_SERVER_PORT=6001
 LARAVEL_ECHO_SERVER_DEBUG=false
+TELESCOPE_ENABLED=false
