--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
     {
       "type": "vcs",
       "url": "https://github.com/ProcessMaker/laravel-chunk-upload"
+    },
+    {
+      "type": "path",
+      "url": "/opt/github/package-data-sources"
     }
   ],
   "require": {
@@ -36,6 +40,7 @@
     "predis/predis": "^1.1",
     "processmaker/laravel-i18next": "dev-master",
     "processmaker/nayra": "dev-master",
+    "processmaker/package-data-sources": "^1.0",
     "processmaker/pmql": "1.1.1",
     "ralouphie/getallheaders": "^2.0",
     "spatie/laravel-fractal": "^5.3",
