--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest": "^22.4.4",
     "jquery": "^3.1.1",
     "laravel-mix": "2.1.*",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "vue": "^2.5.17",
@@ -67,9 +67,10 @@
     "i18next-xhr-backend": "^2.0.1",
     "imports-loader": "^0.8.0",
     "install": "^0.12.2",
-    "jointjs": "^2.1.4",
+    "jointjs": "^3.0.4",
     "laravel-echo": "^1.4.0",
     "laravel-echo-server": "^1.3.8",
+    "luxon": "^1.11.4",
     "monaco-editor": "^0.15.6",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "npm": "^6.7.0",
