Update example .env file with new options

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,17 @@ APP_NAME="ProcessMaker"
 APP_ENV=production
 APP_KEY=
 BROADCAST_DRIVER=redis
+BROADCASTER_HOST=https://processmaker.local.processmaker.com:6001
 BROADCASTER_KEY=
+LARAVEL_ECHO_SERVER_AUTH_HOST=https://processmaker.local.processmaker.com
+LARAVEL_ECHO_SERVER_PORT=6001
+LARAVEL_ECHO_SERVER_DEBUG=FALSE
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_CLUSTER=
+PUSHER_TLS=TRUE
+PUSHER_DEBUG=FALSE
 APP_TIMEZONE=UTC
 DATE_FORMAT="m/d/Y H:i"
 MAIN_LOGO_PATH="/img/processmaker_logo.png"
@@ -21,8 +31,4 @@ DATA_DB_DATABASE=processmaker
 DATA_DB_USERNAME=homestead
 DATA_DB_PASSWORD=secret
 APP_URL=https://processmaker.local.processmaker.com
-BROADCASTER_HOST=https://processmaker.local.processmaker.com:6001
-LARAVEL_ECHO_SERVER_AUTH_HOST=https://processmaker.local.processmaker.com
-LARAVEL_ECHO_SERVER_PORT=6001
-LARAVEL_ECHO_SERVER_DEBUG=false
 TELESCOPE_ENABLED=false
