Adding Redis config to .env.example and installer

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ DATA_DB_USERNAME=homestead
 DATA_DB_PASSWORD=secret
 APP_URL=https://processmaker.local.processmaker.com
 TELESCOPE_ENABLED=false
+REDIS_CLIENT=predis
+REDIS_PREFIX=
+HORIZON_PREFIX=horizon:
