--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.30",
     "accounting": "^0.4.1",
-    "axios": ">=0.19.0",
+    "axios": "^0.19.1",
     "babel-jest": "^22.4.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -37,27 +37,27 @@
     "laravel-mix": "2.1.*",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.27",
-    "vue": "^2.5.17",
+    "vue": "^2.6.11",
     "vue-jest": "^2.6.0",
     "vue-uniq-ids": "^1.0.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.4",
+    "@babel/runtime": "^7.7.7",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/vue-fontawesome": "^0.1.8",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@panter/vue-i18next": "^0.15.0",
     "@processmaker/modeler": "^0.17.9",
     "@processmaker/processmaker-bpmn-moddle": "^0.4.5",
-    "@processmaker/screen-builder": "^0.20.12",
-    "@processmaker/vue-form-elements": "^0.12.8",
+    "@processmaker/screen-builder": "^0.21.1",
+    "@processmaker/vue-form-elements": "^0.13.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap-vue": "^2.2.0",
     "bpmn-moddle": "^6.0.0",
     "chart.js": "^2.9.3",
     "country-json": "^1.1.0",
@@ -73,30 +73,30 @@
     "laravel-echo-server": "^1.6.0",
     "lodash": "^4.17.11",
     "luxon": "^1.21.3",
-    "monaco-editor": "^0.15.6",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "npm": "^6.13.2",
+    "monaco-editor": "^0.19.0",
+    "monaco-editor-webpack-plugin": "^1.8.2",
+    "npm": "^6.13.6",
     "npm-font-open-sans": "^1.1.0",
     "phpunserialize": "^1.0.1",
     "popper.js": "^1.16.0",
     "pusher-js": "^4.4.0",
     "snapsvg": "^0.5.1",
     "source-map": "^0.7.3",
-    "timezones.json": "^1.4.4",
+    "timezones.json": "^1.5.2",
     "tooltip.js": "^1.3.3",
     "v-tooltip": "^2.0.0-rc.33",
     "vue-color": "^2.7.0",
     "vue-croppie": "1.3.12",
     "vue-deepset": "^0.6.3",
     "vue-events": "^3.1.0",
-    "vue-json-pretty": "^1.6.2",
+    "vue-json-pretty": "^1.6.3",
     "vue-monaco": "^0.3.1",
     "vue-multiselect": "^2.1.6",
     "vue-password": "^1.2.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-simple-uploader": "^0.5.6",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.11",
     "vuetable-2": "^1.7.5",
     "webpack": "^3.11.0",
     "xml-js": "^1.6.7"
